force-app/main/default/objects/Request__c/fields/BusinessID__c.field-meta.xml
<CustomField>
    <fullName>BusinessID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>BusinessID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>