force-app/main/default/objects/Request__c/fields/Contact_Email_R__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_R__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>דוא&quot;ל איש קשר</label>
    <type>Email</type>
</CustomField>