force-app/main/default/objects/Request__c/fields/Date_Complete_Info__c.field-meta.xml
<CustomField>
    <fullName>Date_Complete_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>תאריך השלמת פרטים</label>
    <type>DateTime</type>
</CustomField>