force-app/main/default/objects/Request__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>