force-app/main/default/objects/Request__c/fields/Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Job_Duration__c</fullName>
    <label>Job Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>משרה קבועה</fullName>
            </value>
            <value>
                <fullName>משרה זמנית</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>אחר</fullName>
                <isActive>false</isActive>
                <label>אחר</label>
            </value>
            <value>
                <fullName>חמש שנים</fullName>
                <isActive>false</isActive>
                <label>חמש שנים</label>
            </value>
            <value>
                <fullName>חצי שנה</fullName>
                <isActive>false</isActive>
                <label>חצי שנה</label>
            </value>
            <value>
                <fullName>שלוש שנים</fullName>
                <isActive>false</isActive>
                <label>שלוש שנים</label>
            </value>
            <value>
                <fullName>שנה</fullName>
                <isActive>false</isActive>
                <label>שנה</label>
            </value>
            <value>
                <fullName>שנתיים ומעלה</fullName>
                <isActive>false</isActive>
                <label>שנתיים ומעלה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>