force-app/main/default/objects/Request__c/fields/JSON__c.field-meta.xml
<CustomField>
    <fullName>JSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>