force-app/main/default/objects/Request__c/fields/No_recommendation_Reason_PL__c.field-meta.xml
<CustomField>
    <fullName>No_recommendation_Reason_PL__c</fullName>
    <label>סיבת אי מתן המלצה לתוכנית</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closing_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>גודל המעסיק לא מתאים</fullName>
            </value>
            <value>
                <fullName>תחום העיסוק לא מתאים</fullName>
            </value>
            <value>
                <fullName>אין מענה לצורך הנדרש</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>