force-app/main/default/objects/Request__c/fields/Professional_experience__c.field-meta.xml
<CustomField>
    <fullName>Professional_experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Professional experience</label>
    <length>100</length>
    <type>Text</type>
</CustomField>