force-app/main/default/objects/Request__c/fields/Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Category__c</fullName>
    <label>Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Category</valueSetName>
    </valueSet>
</CustomField>