force-app/main/default/objects/Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>