force-app/main/default/objects/Request__c/fields/Request_Purpose_Notes__c.field-meta.xml
<CustomField>
    <fullName>Request_Purpose_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>מטרת הבקשה- הערות</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>