force-app/main/default/objects/Request__c/fields/Required_education_Training__c.field-meta.xml
<CustomField>
    <fullName>Required_education_Training__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Required education/Training</label>
    <length>100</length>
    <type>Text</type>
</CustomField>