force-app/main/default/objects/Request__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SbSts01</fullName>
            </value>
            <value>
                <fullName>SbSts02</fullName>
            </value>
            <value>
                <fullName>SbSts03</fullName>
            </value>
            <value>
                <fullName>SbSts04</fullName>
            </value>
            <value>
                <fullName>SbSts05</fullName>
            </value>
            <value>
                <fullName>SbSts06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>