force-app/main/default/objects/Request__c/fields/Training_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Org_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>שם הגוף המכשיר</label>
    <length>100</length>
    <type>Text</type>
</CustomField>