force-app/main/default/objects/Request__c/fields/Wanted_Institution__c.field-meta.xml
<CustomField>
    <fullName>Wanted_Institution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>יש למלא את השדה במקרה שהמעסיק מעוניין בתוכנית מסלול ירוק</inlineHelpText>
    <label>שם מוסד לימודים מומלץ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>