force-app/main/default/objects/Request__c/recordTypes/Child_Request.recordType-meta.xml
<RecordType>
    <fullName>Child_Request</fullName>
    <active>true</active>
    <label>בקשה</label>
</RecordType>