force-app/main/default/objects/Request__c/recordTypes/Parent_Request.recordType-meta.xml
<RecordType>
    <fullName>Parent_Request</fullName>
    <active>true</active>
    <label>בקשה מרכזת</label>
</RecordType>