force-app/main/default/objects/Request__c/recordTypes/RegulationOfOccupation.recordType-meta.xml
<RecordType>
    <fullName>RegulationOfOccupation</fullName>
    <active>true</active>
    <description>אסדת עיסוקים</description>
    <label>Regulation of Occupation</label>
</RecordType>